# OmniTok

./: .gitignore  README.md  evaluate.py  pyproject.toml  test_all_experiments.py  test_dinov2_loading.py  train.py
.hydra/: config.yaml  hydra.yaml  overrides.yaml
configs/: config.yaml  default.yaml
configs/alignment/: barlow_twins.yaml  cosine.yaml  dino.yaml  disentangled.yaml  mse.yaml  none.yaml  patch_contrastive.yaml  prediction.yaml  relational_kd.yaml  vicreg.yaml
configs/data/: debug.yaml  imagenet.yaml
configs/experiment/: T0_vtp_baseline.yaml  T10_linear_projector.yaml  T1_vae.yaml  T1_vanilla_vae.yaml  T2_frozen_dino_relkd.yaml  T3_dino_cosine.yaml  T3_frozen_dino_cosine.yaml  T4_dino_prediction.yaml  T4_frozen_dino_prediction.yaml  T5_multi_dino_siglip.yaml  T5_multi_teacher.yaml  T6_multi_dino_siglip_sam.yaml  T6_sam_teacher.yaml  T7_depth_teacher.yaml  T7_dino_depth.yaml  T8_masking75.yaml  T8_token_masking.yaml  T9_gaussianity.yaml  T9_gaussianity_reg.yaml  (+1 more)
omnitok/: __init__.py  registry.py
scratch/: add_global.py  test_merge.py
scripts/: evaluate.sh  extract_latents.sh  run_all_experiments.sh  test_all_configs.sh  train_ablations.sh  train_dit.sh  train_e2e.sh  train_tokenizer.sh
tests/: test_data.py  test_disentangled_alignment.py  test_evaluation.py  test_integration.py  test_losses.py  test_models.py  test_moe_bottleneck.py  test_new_components.py  test_registry.py  test_sparse_router.py  test_teachers.py  test_teachers_extended.py  test_training.py  test_utils.py
tools/: compute_gaussianity.py  debug_recon.py  test_experiments.sh
(+148 files in other folders)
