[project]
name = "omnitok"
version = "0.1.0"
description = "Where, What, and How to Align: Vision Foundation Alignment in Visual Tokenizers"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "timm>=1.0.0",
    "einops>=0.7.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "accelerate>=0.25.0",
    "wandb>=0.16.0",
    "lpips>=0.1.4",
    "clean-fid>=0.1.35",
    "Pillow>=10.0.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.15.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
